--- a/config/manifests/bases/multicluster-observability-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/multicluster-observability-operator.clusterserviceversion.yaml
@@ -15,6 +15,11 @@ spec:
       kind: MultiClusterObservability
       name: multiclusterobservabilities.observability.open-cluster-management.io
       version: v1beta1
+    - description: MultiClusterObservability defines the configuration for the Observability installation on Hub and Managed Clusters all through this one custom resource.
+      displayName: Multi Cluster Observability
+      kind: MultiClusterObservability
+      name: multiclusterobservabilities.observability.open-cluster-management.io
+      version: v1beta2
     - description: ObservabilityAddon is the Schema for the observabilityaddon API
       displayName: Observability Addon
       kind: ObservabilityAddon
