--- a/config/samples/observability_v1beta2_multiclusterobservability.yaml
+++ b/config/samples/observability_v1beta2_multiclusterobservability.yaml
@@ -1,10 +1,11 @@
-apiVersion: observability.open-cluster-management.io/v1beta1
+apiVersion: observability.open-cluster-management.io/v1beta2
 kind: MultiClusterObservability
 metadata:
   name: observability
 spec:
   observabilityAddonSpec: {}
-  storageConfigObject:
+  retentionConfig: {}
+  storageConfig:
     metricObjectStorage:
       name: thanos-object-storage
       key: thanos.yaml
