--- a/operators/multiclusterobservability/manifests/base/proxy/deployment.yaml
+++ b/operators/multiclusterobservability/manifests/base/proxy/deployment.yaml
@@ -46,6 +46,7 @@ spec:
         args:
         - "--listen-address=0.0.0.0:8080"
         - "--metrics-server=https://{{OBSERVATORIUM_NAME}}-observatorium-api.{{MCO_NAMESPACE}}.svc.cluster.local:8080/api/metrics/v1/default"
+        - --rules-server=http://observability-thanos-rule:10902/api/v1/rules
         ports:
         - containerPort: 8080
           name: http
