--- a/operators/multiclusterobservability/manifests/base/agent/deployment.yaml
+++ b/operators/multiclusterobservability/manifests/base/agent/deployment.yaml
@@ -1,43 +1,33 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    name: multicluster-observability-operator
-  name: open-cluster-management
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: multicluster-observability-operator
-  namespace: open-cluster-management
+  name: observability-agent-operator
+  namespace: open-cluster-management-observability
   labels:
-    name: multicluster-observability-operator
+    name: observability-agent-operator
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: multicluster-observability-operator
+      name: observability-agent-operator
   template:
     metadata:
       labels:
-        name: multicluster-observability-operator
+        name: observability-agent-operator
     spec:
-      serviceAccountName: multicluster-observability-operator
+      serviceAccountName: observability-agent-operator
       containers:
-      - name: multicluster-observability-operator
+      - name: observability-agent-operator
         command:
-        - mco-operator
+        - observability-agent
         args:
         - -leader-elect
         # Replace this with the built image name
-        image: quay.io/open-cluster-management/multicluster-observability-operator:2.3.0-SNAPSHOT-2021-07-26-18-43-26
+        image: quay.io/open-cluster-management/observability-agent-operator:2.3.0-SNAPSHOT-2021-07-26-18-43-26
         imagePullPolicy: Always
         securityContext:
           allowPrivilegeEscalation: false
         ports:
-        - containerPort: 9443
-          name: webhook-server
-          protocol: TCP
         - containerPort: 8383
           name: metrics
           protocol: TCP
@@ -53,16 +43,12 @@ spec:
             port: 8081
           initialDelaySeconds: 5
           periodSeconds: 10
-        lifecycle:
-          preStop:
-            exec:
-              command: ["/bin/sh", "-c", "/usr/local/bin/prestop.sh"]
         resources:
           limits:
             cpu: 600m
             memory: 1024Mi
           requests:
-            cpu: 100m
+            cpu: 20m
             memory: 128Mi
         env:
           - name: WATCH_NAMESPACE
@@ -75,7 +61,9 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          - name: OPERATOR_NAME
-            value: "multicluster-observability-operator"
+          - name: MCO_POD_NAMESPACE
+            value: open-cluster-management
           - name: TEMPLATES_PATH
             value: /usr/local/manifests
+          - name: SPOKE_NAMESPACE
+            value: open-cluster-management-addon-observability
