--- a/tests/run-in-kind/service-ca/03_cm.yaml
+++ b/tests/run-in-kind/service-ca/03_cm.yaml
@@ -6,4 +6,4 @@ metadata:
 data:
   operator-config.yaml: |
     apiVersion: operator.openshift.io/v1alpha1
-    kind: GenericOperatorConfig
+    kind: Genericoperatorsconfig
