Have separateAgent field
Signed-off-by: clyang82 <chuyang@redhat.com>

--- a/operators/multiclusterobservability/bundle/manifests/observability.open-cluster-management.io_multiclusterobservabilities.yaml
+++ b/operators/multiclusterobservability/bundle/manifests/observability.open-cluster-management.io_multiclusterobservabilities.yaml
@@ -691,6 +691,10 @@ spec:
                         type: object
                     type: object
                 type: object
+              separateAgent:
+                default: false
+                description: Separate agent from the observability core.
+                type: boolean
               storageConfig:
                 description: Specifies the storage to be used by Observability
                 properties:
