--- a/operators/multiclusterobservability/config/crd/bases/observability.open-cluster-management.io_multiclusterobservabilities.yaml
+++ b/operators/multiclusterobservability/config/crd/bases/observability.open-cluster-management.io_multiclusterobservabilities.yaml
@@ -825,6 +825,10 @@ spec:
                         type: object
                     type: object
                 type: object
+              separateAgent:
+                default: false
+                description: Separate agent from the observability core.
+                type: boolean
               storageConfig:
                 description: Specifies the storage to be used by Observability
                 properties:
