--- a/operators/multiclusterobservability/manifests/anonymous-grafana/config.yaml
+++ b/operators/multiclusterobservability/manifests/anonymous-grafana/config.yaml
@@ -6,6 +6,7 @@ stringData:
     disable_signout_menu = true
     [auth.anonymous]
     enabled = true
+    hide_version = true
     [paths]
     data = /var/lib/grafana
     logs = /var/lib/grafana/logs
@@ -13,6 +14,15 @@ stringData:
     provisioning = /etc/grafana/provisioning
     [server]
     http_port = 3001
+    [security]
+    admin_user = WHAT_YOU_ARE_DOING_IS_VOIDING_SUPPORT_0000000000000000000000000000000000000000000000000000000000000000
+    cookie_secure = true
+    [alerting]
+    enabled = false
+    [auth.proxy]
+    auto_sign_up = true
+    enabled = true
+    header_name = X-Forwarded-User
 kind: Secret
 metadata:
   name: anonymous-grafana-config
