--- a/operators/multiclusterobservability/manifests/anonymous-grafana/service.yaml
+++ b/operators/multiclusterobservability/manifests/anonymous-grafana/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   labels:
     app: multicluster-observability-anonymous-grafana
-  name: grafana
+  name: anonymous-grafana
   namespace: open-cluster-management-observability
 spec:
   ports:
