--- a/operators/multiclusterobservability/manifests/anonymous-grafana/deployment.yaml
+++ b/operators/multiclusterobservability/manifests/anonymous-grafana/deployment.yaml
@@ -64,7 +64,7 @@ spec:
         - mountPath: /etc/grafana
           name: grafana-config
       - args:
-        - -from=anonymousgrafana
+        - "--from=anonymousgrafana"
         name: grafana-dashboard-loader
         env:
         - name: POD_NAMESPACE
